# zstd

./: README.md  ffigen.yaml  pubspec.yaml
android/src/main/: AndroidManifest.xml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: zstd.dart  zstd_method_channel.dart  zstd_platform_interface.dart  zstd_web.dart
lib/src/: zstd_api.g.dart
linux/: zstd_plugin.cc
test/: zstd_method_channel_test.dart  zstd_test.dart
windows/: CMakeLists.txt
zstd/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstd/android/: build.gradle  settings.gradle
zstd/example/: README.md  pubspec.yaml
zstd/example/ios/Runner.xcodeproj/: project.pbxproj
zstd/example/ios/RunnerTests/: RunnerTests.swift
zstd/example/lib/: main.dart
zstd/example/linux/: CMakeLists.txt
zstd/example/linux/flutter/: generated_plugins.cmake
zstd/example/macos/Flutter/: GeneratedPluginRegistrant.swift
zstd/example/macos/Runner.xcodeproj/: project.pbxproj
zstd/example/windows/: CMakeLists.txt
zstd/example/windows/flutter/: generated_plugins.cmake
zstd/example/windows/runner/: Runner.rc  main.cpp
zstd/ios/: zstd.podspec
zstd/ios/Classes/: ZstdPlugin.swift  zstd.c
zstd/lib/: zstd.dart  zstd_bindings_generated.dart
zstd/lib/src/: zstd.dart  zstd_bindings.g.dart  zstd_impl.dart  zstd_plugin.dart
zstd/linux/: CMakeLists.txt  zstd_plugin_private.h
zstd/linux/include/zstd/: zstd_plugin.h
zstd/linux/test/: zstd_plugin_test.cc
zstd/macos/: zstd.podspec
zstd/macos/Classes/: ZstdPlugin.swift
zstd/macos/Frameworks/zstd.framework/: zstd
zstd/src/: CMakeLists.txt  zstd.c
zstd/windows/: CMakeLists.txt  zstd_plugin.cpp  zstd_plugin.h  zstd_plugin_c_api.cpp
zstd/windows/include/zstd/: zstd_plugin_c_api.h
zstd/windows/test/: zstd_plugin_test.cpp
zstd_aimwl/: README.md  ffigen.yaml  pubspec.yaml
zstd_aimwl/android/: build.gradle  settings.gradle
zstd_aimwl/android/src/main/: AndroidManifest.xml
zstd_aimwl/example/: README.md  pubspec.yaml
zstd_aimwl/example/android/app/: build.gradle.kts
zstd_aimwl/example/ios/Runner/: Info.plist
zstd_aimwl/example/ios/Runner.xcodeproj/: project.pbxproj
zstd_aimwl/example/lib/: main.dart
zstd_aimwl/example/linux/: CMakeLists.txt
zstd_aimwl/example/linux/flutter/: generated_plugins.cmake
zstd_aimwl/example/linux/runner/: my_application.cc
zstd_aimwl/example/macos/Runner.xcodeproj/: project.pbxproj
zstd_aimwl/example/windows/: CMakeLists.txt
zstd_aimwl/example/windows/flutter/: generated_plugins.cmake
zstd_aimwl/example/windows/runner/: Runner.rc  main.cpp
zstd_aimwl/ios/: zstd_aimwl.podspec
zstd_aimwl/ios/Classes/: zstd_aimwl.c
zstd_aimwl/lib/: zstd_aimwl.dart  zstd_aimwl_bindings_generated.dart
zstd_aimwl/linux/: CMakeLists.txt
zstd_aimwl/macos/: zstd_aimwl.podspec
zstd_aimwl/src/: CMakeLists.txt  zstd_aimwl.c
zstd_aimwl/src/cmake/: external_zstd.cmake  zstd.cmake  zstd.windows.cmake
zstd_aimwl/windows/: CMakeLists.txt
zstd_aimwl/windows/cmake/: zstd.cmake
zstd_api/: CHANGELOG.md  README.md  pubspec.yaml
zstd_api/lib/: zstd_api.dart
zstd_api/lib/src/: zstd_api.dart  zstd_compress_filter_api.dart  zstd_decompress_filter_api.dart  zstd_filter_api.dart
zstd_native/: CHANGELOG.md  README.md  ffigen.zstd.yaml  ffigen.zstd_native.yaml  pubspec.yaml
zstd_native/android/: build.gradle  settings.gradle
zstd_native/android/src/main/: AndroidManifest.xml
zstd_native/darwin/: zstd_native.podspec
zstd_native/darwin/zstd_native/: Package.swift
zstd_native/ios/: zstd_native.podspec
zstd_native/lib/: zstd_native.dart
zstd_native/lib/src/: zstd_bindings.g.dart  zstd_impl.dart  zstd_native_bindings.g.dart  zstd_native_plugin.dart
zstd_native/linux/: CMakeLists.txt
zstd_native/macos/: zstd_native.podspec
zstd_native/macos/Classes/: zstd_native.c
zstd_native/src/: CMakeLists.txt  zstd_native.c
zstd_native/src/cmake/: zstd.cmake
zstd_native/windows/: CMakeLists.txt
(+18 files in other folders)
